# libayatana-appindicator-glib

./: AUTHORS  CMakeLists.txt  ChangeLog  INSTALL.md  NEWS  README.md
bindings/vala/: AyatanaAppIndicatorGlib-2.0.metadata  CMakeLists.txt  ayatana-appindicator-custom.vala
debian/: changelog  control  copyright  gir1.2-ayatanaappindicatorglib-2.0.install  libayatana-appindicator-glib-dev.install  libayatana-appindicator-glib-doc.install  libayatana-appindicator-glib2.install  libayatana-appindicator-glib2.symbols  rules
doc/: AyatanaAppIndicatorGlib-2.0.toml.in
examples/: CMakeLists.txt  simple-client-python.py
src/: CMakeLists.txt  application-service-marshal.list  ayatana-appindicator-glib.pc.in  ayatana-appindicator.c  ayatana-appindicator.h  notification-item.xml
tests/: CMakeLists.txt
